added server chat mirror

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,7 +1,36 @@
 {% extends "core/base.html" %}
 {% block content %}
-    <h1>Chess</h1>
-    {% if user.is_authenticated %}
-    <p>{{user.is_confirmed}}</p>
-    {% endif %}
+<h1 id="messages">Chat</h1>
+<!-- <table class="table">
+    <thead>
+        <tr>
+            <th>Player</th>
+            <th>Message</th>
+        </tr>
+    </thead>
+    <tbody id="results">
+    </tbody>
+</table> -->
+<script>
+    var protocol = '';
+    if (window.location.protocol === 'https:') {
+        protocol = 'wss:';
+    } else {
+        protocol = 'ws:';
+    }
+
+    var chatSocket = new WebSocket(
+        protocol + '//' + window.location.host +
+        '/ws/chat/');
+
+    
+    chatSocket.onmessage = function(e) {
+        var data = JSON.parse(e.data);
+        $('#messages').after(
+            '<p>' + data['username'] + ': ' + data['message'] + '</p>'
+        )
+        console.log(data['username'])
+    };
+</script>
+
 {% endblock content %}
